--- a/src/views/components/Category/CategoryFIlter/index.css
+++ b/src/views/components/Category/CategoryFIlter/index.css
@@ -1,3 +1,9 @@
+.category-container{
+    padding-bottom: 30px;
+    border-bottom: 1px solid #ebebeb;
+    margin-bottom: 30px;
+}
+
 .title-block{
     display: flex;
     justify-content: flex-start;
@@ -21,14 +27,13 @@ ul{
     transition: all 0.5s ease;
     max-height: 0;
     overflow: hidden;
-    margin-bottom: 10px;
 }
 .filter-box.active{
     max-height: max-content;
 }
 h2.title{
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 21px;
     margin: 0;
     padding: 0;
 }
