--- a/src/views/screens/ProductList/index.css
+++ b/src/views/screens/ProductList/index.css
@@ -1,5 +1,4 @@
 .product-list-container {
-    padding: 20px;
     position: relative;
     min-height: 40vh;
 }
@@ -8,6 +7,39 @@
     padding: 10px;
     min-height: 300px;
 }
+
+/* Products header*/
+.product-list-container-title {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #ebebeb;
+}
+
+.titleProducts {
+    display: flex;
+    align-items: flex-end;
+    gap: 10px;
+}
+
+.titleProducts span {
+    font-size: 14px;
+}
+.select-container {
+    width: 20%;
+    font-size: 12px;
+}
+
+.product-list-container-title h1 {
+    text-transform: uppercase;
+    font-size: 21px;
+    margin: 0;
+}
+
+
 
 .product-list-empty {
     position: absolute;
@@ -20,4 +52,9 @@
     font-size: 0.8rem;
     text-align: center;
     font-style: italic;
+}
+
+.pagination-container {
+    display: flex;
+    justify-content: center;
 }
