--- a/src/views/components/Brand/BrandFilter/index.css
+++ b/src/views/components/Brand/BrandFilter/index.css
@@ -1,7 +1,5 @@
 /* CSS BRANDS */
 .filter-panel {
-    border: 1px solid #e0e0e0;
-    padding: 10px;
     max-width: 250px;
   }
   
@@ -12,8 +10,8 @@
   }
   
   .filter-header h3 {
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 18px;
+    text-transform: uppercase;
   }
   
   .toggle-icon {
@@ -35,12 +33,22 @@
   .brand-item:hover {
     color: #6200ea; /* Màu sắc khi hover */
   }
-  
-  .filter-content::-webkit-scrollbar {
-    width: 6px; /* Độ rộng của thanh cuộn */
-  }
-  
-  .filter-content::-webkit-scrollbar-thumb {
-    background-color: #6200ea; /* Màu của thanh cuộn */
-    border-radius: 10px;
-  }
+
+
+.filter-content::-webkit-scrollbar{
+  width: 8px;
+}
+
+.filter-content::-webkit-scrollbar-track{
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+.filter-content::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #FCC419C8;
+}
+
+.filter-content::-webkit-scrollbar-thumb:hover {
+  background-color: #FCC419;
+}
