--- a/src/views/components/SizeFilter/sizeFilter.css
+++ b/src/views/components/SizeFilter/sizeFilter.css
@@ -1,10 +1,13 @@
 .size-filter-container {
-
+    padding-bottom: 30px;
+    border-bottom: 1px solid #ebebeb;
+    margin-bottom: 30px;
 }
 
 .size-filter-title {
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 18px;
+    text-transform: uppercase;
+
 }
 
 .size-block{
