--- a/src/views/components/productItem/productItem.css
+++ b/src/views/components/productItem/productItem.css
@@ -6,6 +6,7 @@
     background: #fff;
     border-radius: 5px;
     margin-bottom: 20px;
+    box-shadow: 0 0 5px #ccc;
 }
 
 .product-item:hover{
@@ -37,6 +38,7 @@
     text-overflow: ellipsis;
     font-size: 14px;
     margin-top: 10px;
+    text-align: center;
 }
 
 .product-title a{
