edit modal, delete dtos, update discount, product detail

--- a/src/views/components/SizeFilter/sizeFilter.css
+++ b/src/views/components/SizeFilter/sizeFilter.css
@@ -10,7 +10,7 @@
 
 }
 
-.size-block{
+.size-filter-container .size-block{
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -19,29 +19,29 @@
     overflow-y: scroll;
 }
 
-.size-block::-webkit-scrollbar{
+.size-filter-container .size-block::-webkit-scrollbar{
     width: 8px;
 }
 
-.size-block::-webkit-scrollbar-track{
+.size-filter-container .size-block::-webkit-scrollbar-track{
     background: #f1f1f1;
     border-radius: 10px;
 }
 
-.size-block::-webkit-scrollbar-thumb {
+.size-filter-container .size-block::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #FCC419C8;
 }
 
-.size-block::-webkit-scrollbar-thumb:hover {
+.size-filter-container .size-block::-webkit-scrollbar-thumb:hover {
     background-color: #FCC419;
 }
 
-.size-item:hover {
+.size-filter-container .size-item:hover {
     background-color: #EAEAEAFF;
 }
 
-.size-item{
+.size-filter-container .size-item{
     padding: 10px 20px;
     border-radius: 10px;
     background-color: #f1f0f1;
@@ -55,7 +55,7 @@
     justify-content: center;
 }
 
-.size-item.active {
+.size-filter-container .size-item.active {
     background-color: #FCC419; /* Màu khi được chọn */
     color: white;
 }
