--- a/src/views/components/PriceFilter/PriceFilter.css
+++ b/src/views/components/PriceFilter/PriceFilter.css
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
 }
 
-input[type="number"] {
+.price-filter input[type="number"] {
   width: 100px;
   padding: 5px;
   font-size: 16px;
@@ -25,7 +25,7 @@ input[type="number"] {
   border: 1px solid #ccc;
 }
 
-button {
+.price-filter button {
   margin-top: 10px;
   padding: 8px 15px;
   width: 100%;
@@ -36,15 +36,15 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.price-filter button:hover {
   background-color: #0056b3;
 }
 
-.rc-slider-track {
+.price-filter .rc-slider-track {
   background-color: #1890ff;
 }
 
-.rc-slider-handle {
+.price-filter .rc-slider-handle {
   width: 20px;
   height: 20px;
   margin-top: -8px;
@@ -53,12 +53,12 @@ button:hover {
   cursor: pointer; /* Con trỏ khi di chuột qua tay nắm */
 }
 
-.rc-slider-handle:hover {
+.price-filter .rc-slider-handle:hover {
   border-color: #0056b3 !important;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Hiệu ứng đổ bóng */
 }
 
-.rc-slider {
+.price-filter .rc-slider {
   margin: 20px 0;
 }
 
