--- a/src/views/screens/Detail/tabMoreInfoDetail.css
+++ b/src/views/screens/Detail/tabMoreInfoDetail.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: flex-start;
     gap: 20px;
+    margin-top: 50px;
 }
 
 .detail-tab {
@@ -25,7 +26,7 @@
 }
 
 .detail-container {
-    margin: 10px 0;
+    margin: 10px 0 30px 0;
     border: .5px solid var(--bs-primary);
     animation: detail-container-fade .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     border-radius: 20px;
