--- a/src/views/components/productItem/productItem.css
+++ b/src/views/components/productItem/productItem.css
@@ -91,7 +91,8 @@
     position: absolute;
     transition: all 0.5s;
     top: 50%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .product-item:hover .img-main {
